--- a/bootstrap1.html
+++ b/bootstrap1.html
@@ -44,6 +44,39 @@
                     </div>
                 </div>
             </div>
+            <div class="col-7 bg-warning text-white">
+                kolom 2
+                <div class="row">
+                    <div class="col-4 bg-dark text-white">
+                        kolom 2.1
+                    </div>
+                    <div class="col-8 bg-dark text-white">
+                        kolom 2.2
+                    </div>
+                </div>
+            </div>
+            <div class="col-7 bg-warning text-white">
+                kolom 2
+                <div class="row">
+                    <div class="col-4 bg-dark text-white">
+                        kolom 2.1
+                    </div>
+                    <div class="col-8 bg-dark text-white">
+                        kolom 2.2
+                    </div>
+                </div>
+            </div>
+            <div class="col-7 bg-warning text-white">
+                kolom 2
+                <div class="row">
+                    <div class="col-4 bg-dark text-white">
+                        kolom 2.1
+                    </div>
+                    <div class="col-8 bg-dark text-white">
+                        kolom 2.2
+                    </div>
+                </div>
+            </div>
             <div class="col-3 bg-success">kolom 3</div>
         </div>
 </div>
